# unicef-attachments

./: .gitignore  .isort.cfg  .travis.yml  .travis.yml.bak  CHANGES  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.sh  tox.ini
.circleci/: config.yml
.github/workflows/: continuous-integration-workflow.yml
src/requirements/: install.pip  testing.pip
src/unicef_attachments/: __init__.py  admin.py  fields.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
src/unicef_attachments/management/commands/: denormalize_attachments.py
src/unicef_attachments/migrations/: 0001_initial.py  0002_attachmentlink.py  0003_auto_20190227_1332.py  0004_auto_20190228_1023.py  0004_filetype_group.py  0005_auto_20190705_1746.py  0006_auto_20211123_2120.py  0007_alter_attachment_hyperlink.py  0008_attachment_is_active.py
tests/: .coveragerc  conftest.py  factories.py  test_admin.py  test_commands.py  test_fields.py  test_models.py  test_serializers.py  test_utils.py  test_validators.py  test_views.py
tests/demoproject/demo/: settings.py  urls.py
tests/demoproject/demo/sample/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
tests/demoproject/demo/sample/migrations/: 0001_initial.py
