[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicef-attachments"
dynamic = ["version"]
description = "Django package that handles attachments"
readme = "README.rst"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "UNICEF", email = "dev@unicef.org" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "django",
    "django-model-utils",
    "django-ordered-model",
    "djangorestframework",
    "drf-querystringfilter",
    "python-magic",
    "pytz",
    "unicef-restlib",
]

[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "django-fsm",
    "factory-boy",
    "faker",
    "flake8",
    "isort",
    "psycopg2-binary",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
]

[project.urls]
Homepage = "https://github.com/unicef/unicef-attachments"

[tool.hatch.version]
path = "src/unicef_attachments/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''
